--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,33 @@
 alembic==1.12.1
+aniso8601==9.0.1
 blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
+dnspython==2.4.2
+email-validator==2.1.0.post1
 Flask==3.0.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
+Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.1
+idna==3.6
+infinity==1.5
+intervals==0.9.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.3.0
 MarkupSafe==2.1.3
 PyMySQL==1.1.0
 python-dotenv==1.0.0
+pytz==2023.3.post1
+six==1.16.0
 SQLAlchemy==2.0.23
+SQLAlchemy-Utils==0.41.1
 typing_extensions==4.8.0
+validators==0.22.0
 Werkzeug==3.0.1
 WTForms==3.1.1
+WTForms-Alchemy==0.18.0
+WTForms-Components==0.10.5
